--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <h1>Source Control</h1>
+        <h1>Source Control_1</h1>
     </header>
     <script src="script.js"></script>
 </body>
