first change from worker B: chaning the header

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <h1>Source Control_1</h1>
+        <h1>Source Control_1 is a new stuff for me!</h1>
     </header>
     <script src="script.js"></script>
 </body>
