add background title

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <header>
         <h1>Source Control_1 is a NEW stuff for me!</h1>
     </header>
+        <h2>This is the background!</h2>
     <script src="script.js"></script>
 </body>
 </html>
