--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <h1>Source Control_1 is a NEW stuff for me!</h1>
+        <h1>Source Control is a NEW stuff for me!</h1>
     </header>
         <h2>This is the Background!</h2>
         <ol>
